Updated Automated Smart Blinds web GUI

--- a/ASBproject/AutomatedSmartBlinds/WebApplication1/Site.Master
+++ b/ASBproject/AutomatedSmartBlinds/WebApplication1/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="WebApplication1.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="SmartBlindsWebApp.SiteMaster" %>
 
 <!DOCTYPE html>
 
@@ -47,7 +47,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" runat="server" href="~/">Automated Smart Blinds</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
