--- a/ASBproject/AutomatedSmartBlinds/WebApplication1/Site.Mobile.Master
+++ b/ASBproject/AutomatedSmartBlinds/WebApplication1/Site.Mobile.Master
@@ -1,11 +1,11 @@
-<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Mobile.master.cs" Inherits="WebApplication1.Site_Mobile" %>
+<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.Mobile.master.cs" Inherits="SmartBlindsWebApp.Site_Mobile" %>
 <%@ Register Src="~/ViewSwitcher.ascx" TagPrefix="friendlyUrls" TagName="ViewSwitcher" %>
 
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <meta name="viewport" content="width=device-width" />
-    <title></title>
+    <title>Automated Smart Blinds Mobile</title>
     <asp:ContentPlaceHolder runat="server" ID="HeadContent" />
 </head>
 <body>
