--- a/ASBWeb/ASBWeb/ASBWeb.Master
+++ b/ASBWeb/ASBWeb/ASBWeb.Master
@@ -10,7 +10,7 @@
      <meta name="description" content="" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="manifest" href="site.webmanifest" />
-		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico" />
+		<link rel="shortcut icon" type="image/x-icon" href="assets/img/Automated_Smart_Blinds_Logo_Main_blinds.ico" />
 
 
     <asp:ContentPlaceHolder ID="head" runat="server">
